--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -2,18 +2,17 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 20px;
+  gap: 40px;
+  justify-content: center;
 }
 
 .listItem {
   display: flex;
   flex-direction: column;
   align-items: center;
-
   width: 200px;
   height: 300px;
   padding: 12px;
-
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
@@ -21,6 +20,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .character {
   font-size: 14px;
 }
