--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,5 @@
 .nav {
   padding: 10px 24px;
-
   border-bottom: 1px solid black;
   box-shadow: 0px 10px 12px -4px rgba(0, 0, 0, 0.36);
   margin-bottom: 24px;
@@ -16,5 +15,5 @@
 
 .navLink:hover,
 .navLink:focus {
-  color: rgb(184, 92, 7);
+  color: #8f4a0a;
 }
