--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -8,8 +8,8 @@
   margin-right: 16px;
   width: 300px;
   outline: none;
-  border: 1px solid black;
-  border-radius: 8px;
+  border: 1px solid #563600dd;
+  border-radius: 6px;
 }
 
 .btnSearch {
@@ -18,8 +18,8 @@
   padding: 8px 14px;
   background-color: white;
   outline: none;
-  border: 1px solid black;
-  border-radius: 8px;
+  border: 1px solid #563600dd;
+  border-radius: 6px;
   cursor: pointer;
 }
 
