--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -8,7 +8,7 @@
   margin-right: 16px;
   width: 300px;
   outline: none;
-  border: 1px solid #563600dd;
+  border: 1px solid #12c678;
   border-radius: 6px;
 }
 
@@ -18,12 +18,12 @@
   padding: 8px 14px;
   background-color: white;
   outline: none;
-  border: 1px solid #563600dd;
+  border: 1px solid #12c678;
   border-radius: 6px;
   cursor: pointer;
 }
 
 .btnSearch:hover,
 .btnSearch:focus {
-  color: rgb(184, 92, 7);
+  color: #13a264;
 }
