--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -4,12 +4,24 @@
 }
 
 .movieList {
-  list-style: inside;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.img {
+  width: 300px;
+  height: 450px;
 }
 
 .item {
   color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
 .item:hover,
 .item:focus {
   color: #13a264;
